--- a/pom.xml
+++ b/pom.xml
@@ -7,17 +7,17 @@
   <groupId>com.licc.code</groupId>
   <artifactId>coding-java</artifactId>
   <version>1.0-SNAPSHOT</version>
+
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
   </build>
-
 </project>
