--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
   <groupId>com.licc.code</groupId>
   <artifactId>coding-java</artifactId>
   <version>1.0-SNAPSHOT</version>
-
+  <dependencies>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.10.2</version>
+    </dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
